--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
+    "react-spring": "^9.5.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.3"
+    "semantic-ui-react": "^2.1.3",
+    "swiper": "^8.3.1"
   },
   "devDependencies": {
     "eslint": "8.19.0",
