--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "next": "12.2.2",
+    "next-redux-wrapper": "^7.0.5",
     "npm": "^8.15.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
